style.css
body {
    margin: 0px;
    padding: 0px;

    overflow-x: hidden;
    font-family: 'Raleway', sans-serif;
}

.container {
    max-width: 100%;
    padding: 0px;
    margin: 0 auto;
}


nav {
    max-width: 100%;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    align-items: center;
    justify-content: space-around;
    padding: 15px;
}

.logo {
    color: whitesmoke;
    font-size: 1.5em;
    letter-spacing: 5px;
    text-transform: uppercase;
}

.nav-links {
    display: flex;
    justify-content: space-around;
    width: 30%;
}

.nav-links li {
    list-style: none;
}

.nav-links a {
    font-size: 1em;
    text-decoration: none;
    letter-spacing: 2px;
    color: whitesmoke;
}

.burger {
    display: none;
}

.burger div {
    width: 25px;
    height: 1px;
    margin: 5px;
    background-color: whitesmoke;
  }


.whitebox {
    position: absolute;
    bottom: 0;
    width: 40%;
    height: 150px;
    background-color: white;
}


.header {
    background-image: url("./assets/dark-wall.png");
    height: 100vh;
    background-size: cover;
    background-repeat: no-repeat;
}

.title {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.big-text {
    margin-left: 2em;
    margin-right: 2em;
    text-align: center;
    margin-top: 2em;
    text-transform: uppercase;
    font-size: 3em;
    color: whitesmoke;
    font-weight: 300;
    letter-spacing: 3px;
}

.bold-text {
    font-style: bold;
    font-weight: 600;
}

.content {
    height: 100vh;
    background-color: whitesmoke;
    display: flex;
}


.intro {
    background: black;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
}

.intro-text {
    color: whitesmoke;
    font-size: 2rem;
    margin-top: 0rem;
    padding-top: 0rem;
    position: absolute;
    top: 100px;
}

.hide {
    background-color: black;
    overflow: hidden;
}

.hide span {
    transform: translateY(100%);
    display: inline-block;
}



@media screen and (max-width: 1024px) {
    .whitebox {
        width: 50%;
    }
}


@media screen and (max-width: 768px) {
    .nav-links {
        display: none;
        padding-top: 1em;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        width: 100%;
    }

    .nav-links li {
        padding: 10px;
    }

    .nav-links.nav-active {
        display: flex;
    }

    .burger {
        cursor: pointer;
        display: block;
    }

    .whitebox {
        display: none;
    }

    .intro-text {
        
        color: whitesmoke;
        font-size: 1.3rem;
        margin-top: 0rem;
        padding-top: 0rem;
    }
}

@media screen and (max-width: 400px) {
    .big-text {
        font-size: 2em;
        letter-spacing: 2px;
    }
}

